--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,1 +1,33 @@
-<p>auth works!</p>
+<section class="vh-100">
+  <div class="container py-5 h-100">
+    <div class="row d-flex align-items-center justify-content-center h-100">
+      <div class="col-md-8 col-lg-7 col-xl-6">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+          class="img-fluid" alt="Phone image">
+      </div>
+      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+        <form #form = ngForm (ngSubmit)="login(form)">
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" name="email" id="form1Example13" class="form-control form-control-lg" [(ngModel)]="auth.email" />
+            <label class="form-label" for="form1Example13">Email address</label>
+          </div>
+
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" [(ngModel)]="auth.email"  />
+            <label class="form-label" for="form1Example23">Password</label>
+          </div>
+
+          <!-- Submit button -->
+          <button class="btn btn-primary btn-lg btn-block">Sign in</button>
+
+          <div class="divider d-flex align-items-center my-4">
+            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
