--- a/src/app/login/components/auth/auth.component.html
+++ b/src/app/login/components/auth/auth.component.html
@@ -15,19 +15,16 @@
 
           <!-- Password input -->
           <div class="form-outline mb-4">
-            <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" [(ngModel)]="auth.email"  />
+            <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" [(ngModel)]="auth.password"  />
             <label class="form-label" for="form1Example23">Password</label>
           </div>
 
           <!-- Submit button -->
           <button class="btn btn-primary btn-lg btn-block">Sign in</button>
 
-          <div class="divider d-flex align-items-center my-4">
-            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-          </div>
-
         </form>
       </div>
     </div>
   </div>
 </section>
+<router-outlet></router-outlet>
