--- a/src/app/menu/components/barra/barra.component.html
+++ b/src/app/menu/components/barra/barra.component.html
@@ -1,5 +1,6 @@
-<nav  id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Veterinaria XYZ</a>
+<nav id="navbarnav" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <mat-toolbar class="header-toolbar">
+  <a class="navbar-brand" href="pacientes">Veterinaria XYZ</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,15 +8,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Pacientes</a>
+        <a class="nav-link" href="pacientes">Pacientes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Personas</a>
+        <a class="nav-link" href="personas">Personas</a>
       </li>
     </ul>
     <form (ngSubmit)="logOut()" style="display: flex; padding-left: 70%;" class="form-inline my-2 my-lg-0">
       <button  class="btn  my-sm-0s" type="submit">Logout</button>
     </form>
   </div>
+</mat-toolbar>
 </nav>
+
+
         <router-outlet></router-outlet>
